<resources>
    <string name="app_name">SunmiPayDemoV2</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all_open">All Open</string>
    <string name="all_close">All Close</string>
    <string name="amount">Amount (cent)</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="loading">Load</string>
    <string name="handling">Processing</string>
    <string name="requesting">Requesting</string>
    <string name="connect_loading">connecting to sdk</string>
    <string name="connect_success">connect to sdk success</string>
    <string name="connect_fail">connect to sdk fail, please exit to reconnect</string>
    <string name="basic">Basic</string>
    <string name="read_card">ReadCard</string>
    <string name="pin_pad">PinPad</string>
    <string name="security">Security</string>
    <string name="emv">EMV</string>
    <string name="version">Version</string>
    <string name="other">Other</string>
    <string name="basic_get_sys_param">Get system parameters</string>
    <string name="basic_set_sys_param">Set system parameters</string>
    <string name="basic_buzzer">Buzzer</string>
    <string name="basic_led">LED lamp control</string>
    <string name="basic_screen_mode">Set screen exclusive</string>
    <string name="basic_buzzer_time">Buzzer time</string>
    <string name="basic_buzzer_time_delay">delay time (200~10000 ms)</string>
    <string name="basic_buzzer_1">1 time</string>
    <string name="basic_buzzer_2">2 time</string>
    <string name="basic_buzzer_3">3 time</string>
    <string name="basic_buzzer_4">4 time</string>
    <string name="basic_buzzer_5">5 time</string>
    <string name="basic_buzzer_6">6 time</string>
    <string name="basic_buzzer_time_delay_hint">Please input correct delay time</string>
    <string name="basic_sys_key">Key name(Only set Reserved key)</string>
    <string name="basic_sys_value">Key value</string>
    <string name="basic_sys_key_hint">Please input key name</string>
    <string name="basic_screen_model_open">Open screen exclusive</string>
    <string name="basic_screen_model_close">Close screen exclusive</string>
    <string name="basic_screen_model_hint">Screen exclusive\nPower key disabled\nVolume key disabled\nSystem status bar disabled\nSystem navigation bar disabled</string>
    <string name="card_test_mag">Magnetic card test</string>
    <string name="card_test_ic">IC card test</string>
    <string name="card_test_m1">MiFare card test</string>
    <string name="card_test_sam">SAM card test</string>
    <string name="card_test_MIFARE_Ultralight">MiFare Ultralight C card test</string>
    <string name="card_test_MIFARE_Ultralight_ev1">MiFare Ultralight ev1 card test</string>
    <string name="card_test_FELICA">FeLiCa card test</string>
    <string name="card_test_NISO">NIS0 card test</string>
    <string name="card_total">Total：</string>
    <string name="card_success">Pass：</string>
    <string name="card_fail">Fail：</string>
    <string name="card_track1">Track1：</string>
    <string name="card_track2">Track2：</string>
    <string name="card_track3">Track3：</string>
    <string name="card_uuid">UUID：</string>
    <string name="card_atr">ATR：</string>
    <string name="card_sector">Sector (0&#8211;15)</string>
    <string name="card_block">Block (0&#8211;2)</string>
    <string name="card_key_A">KeyA</string>
    <string name="card_key_B">KeyB</string>
    <string name="card_block_0">Block0</string>
    <string name="card_block_1">Block1</string>
    <string name="card_block_2">Block2</string>
    <string name="card_balance_symbol">Balance:</string>
    <string name="card_cost">Cost</string>
    <string name="card_read">Read</string>
    <string name="card_write">Write</string>
    <string name="card_init">Init</string>
    <string name="card_balance">Balance</string>
    <string name="card_value_add">Add</string>
    <string name="card_value_reduce">Reduce</string>
    <string name="card_sector_hint">Please input correct sector(0&#8211;15)</string>
    <string name="card_block_hint">Please input correct block(0&#8211;2)</string>
    <string name="card_key_hint">Please input correct key</string>
    <string name="card_cost_hint">Please input correct cost amount</string>
    <string name="card_auth_success">Auth success</string>
    <string name="card_auth_fail">Auth fail</string>
    <string name="card_wallet_init_success">Init wallet format success</string>
    <string name="card_wallet_init_fail">Init wallet format fail</string>
    <string name="card_wallet_balance_success">Get wallet balance success</string>
    <string name="card_wallet_balance_fail">Get wallet balance fail</string>
    <string name="card_wallet_add_value_success">Increase wallet value success</string>
    <string name="card_wallet_add_value_fail">Increase wallet value fail</string>
    <string name="card_wallet_dec_value_success">Decrease wallet value success</string>
    <string name="card_wallet_dec_value_fail">Decrease wallet value fail</string>
    <string name="card_command">Command</string>
    <string name="card_lc_length">LC length</string>
    <string name="card_data">Data content</string>
    <string name="card_le_length">LE length</string>
    <string name="card_command_hint">Please input correct command</string>
    <string name="card_lc_length_hint">Please input correct LC length</string>
    <string name="card_data_hint">Please input correct data content</string>
    <string name="card_le_length_hint">Please input correct LE length</string>
    <string name="pin_pad_card_no">Please input card No. (13&#8211;19)</string>
    <string name="pin_pad_key_index">Please input key index (0&#8211;19)</string>
    <string name="pin_pad_timeout">Please input timeout (0&#8211;60 s)</string>
    <string name="pin_pad_out_of_order_keyboard">Out-of-order keyboard</string>
    <string name="pin_pad_orderly_keyboard">Orderly keyboard</string>
    <string name="pin_pad_online_pin">Online PIN</string>
    <string name="pin_pad_offline_pin">Offline PIN</string>
    <string name="pin_pad_preset_keyboard">Preset password keyboard</string>
    <string name="pin_pad_custom_keyboard">Custom password keyboard</string>
    <string name="pin_pad_bypass">support bypass pin</string>
    <string name="pin_pad_call_password_keyboard">Call password keyboard</string>
    <string name="pin_pad_key_index_hint">Please input correct key index</string>
    <string name="pin_pad_timeout_hint">Please input correct timeout</string>
    <string name="pin_pad_card_no_hint">Please input correct card No</string>
    <string name="pin_pad_calculate_algorithm_type">计算PinBlock的算法类型</string>
    <string name="pin_pad_des">3DES</string>
    <string name="pin_pad_sm4">SM4</string>
    <string name="pin_pad_pik_key_system">PIK key system</string>
    <string name="pin_pad_sec_normal">SEC_MkSk</string>
    <string name="pin_pad_sec_duk">SEC_DuKpt</string>
    <string name="security_save_plaintext_key">Save PlainText Key</string>
    <string name="security_save_cipher_text_key">Save CipherText Key</string>
    <string name="security_calc_mac">Calculate MAC</string>
    <string name="security_data_encrypt">Data Encrypt</string>
    <string name="security_data_decrypt">Data Decrypt</string>
    <string name="security_get_encrypt_sn">Get encrypted data by hardware serial number (only used in China)</string>
    <string name="security_DuKpt_save_key">DuKpt Inject Key</string>
    <string name="security_DuKpt_calc_mac">DuKpt Calculate MAC</string>
    <string name="security_DuKpt_data_encrypt">DuKpt Data Encrypt</string>
    <string name="security_DuKpt_data_decrypt">DuKpt Data Decrypt</string>
    <string name="security_DuKpt_increase_ksn">DuKpt KSN Increase</string>
    <string name="security_DuKpt_current_ksn">DuKpt Get Current KSN</string>
    <string name="emv_swing_card_mag">Please swipe card</string>
    <string name="emv_swing_card_ic">Please swipe card and insert card</string>
    <string name="emv_confirm_card_no">Confirm card number</string>
    <string name="emv_confirm_cert">Confirm certificate information</string>
    <string name="emv_card_no_error">Get Card info error</string>
    <string name="emv_app_select">Please select app</string>
    <string name="emv_ic_process">NFC/IC Process</string>
    <string name="emv_mag_process">Magnetic Process</string>
    <string name="other_language">Language</string>
    <string name="other_language_auto">Auto</string>
    <string name="other_language_zh_cn">简体中文</string>
    <string name="other_language_en_us">English</string>
    <string name="other_version_sn">Device SN：</string>
    <string name="other_version_rom">Rom Version：</string>
    <string name="other_version_device">Device Model：</string>
    <string name="other_version_demo">SunMiPaySDKDemo Version：</string>
    <string name="other_version_service">SunMiPayHardwareService Version：</string>
    <string name="security_kek">KEK</string>
    <string name="security_tmk">TMK</string>
    <string name="security_tdk">TDK</string>
    <string name="security_pik">PIK</string>
    <string name="security_mak">MAK</string>
    <string name="security_key_type">Key Type</string>
    <string name="security_key_index">key index</string>
    <string name="security_key_value">key value</string>
    <string name="security_rec_key">Custom Key Type</string>
    <string name="security_check_value">key check value</string>
    <string name="security_mak_index">MAK Index</string>
    <string name="security_decrypt_index">encrypt key index</string>
    <string name="security_key_alg_type">key algorithm type</string>
    <string name="security_alg_aes">AES</string>
    <string name="security_alg_sm4">SM4</string>
    <string name="security_alg_3des_or_des">3DES/DES</string>
    <string name="security_ksn_hint">please input correct ksn</string>
    <string name="security_key_value_hint">please input correct key value</string>
    <string name="security_check_value_hint">please input correct check value</string>
    <string name="security_source_data_hint">please input correct source data</string>
    <string name="security_duKpt_key_hint">please input correct key index (range 0&#8211;9)</string>
    <string name="security_key_index_hint">please input correct key index (range 0&#8211;19)</string>
    <string name="security_init_vector_hint">please input correct initialization vector (8 byte)</string>
    <string name="security_decrypt_index_hint">please input correct encrypt index (range 0&#8211;19)</string>
    <string name="security_mac_calc_type1">MAC_ALG_ISO_9797_1_MAC_ALG1</string>
    <string name="security_mac_calc_type2">MAC_ALG_ISO_9797_1_MAC_ALG3</string>
    <string name="security_mac_calc_type3">MAC_ALG_ISO_16609_MAC_ALG1</string>
    <string name="security_mac_calc_type4">MAC_ALG_FAST_MODE</string>
    <string name="security_mac_calc_type5">MAC_ALG_X9_19</string>
    <string name="security_mac_calc_type6">MAC_ALG_CBC</string>
    <string name="security_mac_calc_type7">MAC_ALG_CUP_SM4_MAC_ALG1</string>
    <string name="security_mac_calc_type8">MAC_ALG_FAST_MODE_INTERNATIONAL</string>
    <string name="security_mac_calc_type9">MAC_ALG_CBC_INTERNATIONAL</string>
    <string name="security_source_data">source data</string>
    <string name="security_encrypt_type">encrypt mode</string>
    <string name="security_calc_result">calculate result</string>
    <string name="security_mac_alg_type">mac algorithm type</string>
    <string name="security_init_vector">initialization vector</string>
    <string name="security_data_mode_ebc">DATA_MODE_ECB</string>
    <string name="security_data_mode_cbc">DATA_MODE_CBC</string>
    <string name="security_data_mode_ofb">DATA_MODE_OFB</string>
    <string name="security_data_mode_cfb">DATA_MODE_CFB</string>
    <string name="security_decrypt_mode">decrypt mode</string>
</resources>