<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/key_index"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_key_index"
                    android:inputType="number"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/security_decrypt_mode"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/mac_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_decrypt_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:checked="true"
                    android:text="@string/security_data_mode_ebc"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_decrypt_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_data_mode_cbc"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_decrypt_type3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_data_mode_ofb"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_decrypt_type4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_data_mode_cfb"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/initialization_vector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_init_vector"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2048">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/source_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_source_data"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/security_calc_result"
                android:textColor="@color/colorTextTitle"
                android:textSize="14sp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/mb_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorOrange"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>