<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/card_magnetic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemSize"
            android:layout_marginTop="24dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/mb_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_total"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/colorTextContent"
                android:textSize="14sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="0dp"
                app:strokeColor="@color/colorLineColor"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/mb_success"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_success"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/colorTextContent"
                android:textSize="14sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="0dp"
                app:strokeColor="@color/colorLineColor"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/mb_fail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_fail"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/colorTextContent"
                android:textSize="14sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="0dp"
                app:strokeColor="@color/colorLineColor"
                app:strokeWidth="1dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_track1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/card_track1"
            android:textColor="@color/colorTextContent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_track2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/card_track2"
            android:textColor="@color/colorTextContent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_track3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/card_track3"
            android:textColor="@color/colorTextContent"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>