<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_basic"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#66CC33"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_view_card"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/basic"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_card"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#3399FF"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/card_view_basic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read_card"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_security"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#FFCC00"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_view_pin_pad"
        app:layout_constraintTop_toBottomOf="@+id/card_view_basic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/security"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_pin_pad"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#607B8B"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/card_view_security"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/card_view_basic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pin_pad"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_emv"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#FF6600"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_view_version"
        app:layout_constraintTop_toBottomOf="@+id/card_view_pin_pad">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emv"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_version"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#66CC33"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/card_view_emv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_pin_pad">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view_other"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#3399FF"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_view_version"
        app:layout_constraintTop_toBottomOf="@+id/card_view_emv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/other"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.design.card.MaterialCardView>

</android.support.constraint.ConstraintLayout>